Fix hero text-align

--- a/src/assets/styles/layout/_hero.scss
+++ b/src/assets/styles/layout/_hero.scss
@@ -26,6 +26,7 @@
     max-height: max-content;
     min-width: 360px;
     justify-self: start;
+    text-align: start;
     align-self: center;
     overflow: hidden;
     display: -webkit-box;
